添加 SyncSpeech 实验

--- a/Models/SpeechLM/ST2S/2025.02.16_SyncSpeech.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_SyncSpeech.md
@@ -147,12 +147,12 @@ The proposed SyncSpeech can process streaming text input and generates speech in
 
 A dual-stream TTS model simultaneously processes streaming text input and generates speech in a streaming manner.
 Upon receiving newly generated text tokens $\boldsymbol{y}_{\text{arr}}$ from the upstream LLMs, the objective of the dual-streaming TTS it to estimate $p(\boldsymbol{x}_{\text{arr}} | \boldsymbol{y}_{\text{arr}}, \boldsymbol{x}_{\text{pre}},\boldsymbol{y}_{\text{pre}})$.
-In this context,  $\boldsymbol{x}_{\text{arr}}$ represents the speech waveform segment corresponding to $\boldsymbol{y}_{\text{arr}}$, while   $\boldsymbol{y}_{\text{pre}}$ and $ \boldsymbol{x}_{\text{pre}}$ denote the preceding text tokens and its corresponding speech waveform, respectively.
+In this context, $\boldsymbol{x}_{\text{arr}}$ represents the speech waveform segment corresponding to $\boldsymbol{y}_{\text{arr}}$, while $\boldsymbol{y}_{\text{pre}}$ and $ \boldsymbol{x}_{\text{pre}}$ denote the preceding text tokens and its corresponding speech waveform, respectively.
 
 SyncSpeech is a two-stage TTS system, consisting of the text-to-token and token-to-speech stages.
-The estimation of $p(\boldsymbol{x}_{\text{arr}} | \boldsymbol{y}_{\text{arr}}, \boldsymbol{x}_{\text{pre}}, \boldsymbol{y}_{\text{pre}})$ is decomposed into a  text-to-token model $p(\boldsymbol{s}_{\text{arr}}| \boldsymbol{y}_{\text{arr}}, \boldsymbol{x}_{\text{pre}}, \boldsymbol{y}_{\text{pre}})$ and a token-to-speech model $p(\boldsymbol{x}_{\text{arr}} | \boldsymbol{s}_{\text{arr}})$, where $\boldsymbol{s}_{\text{arr}}$ is the speech tokens corresponding to the speech waveform segment $\boldsymbol{x}_{\text{arr}}$.
-Specifically,  the proposed TMT is adopted as the backbone of text-to-token model.
-Then, an off-the-shelf chunk-aware speech decoder \cite{cosyvoice2.0} is adopted as the  token-to-speech model.
+The estimation of $p(\boldsymbol{x}_{\text{arr}} | \boldsymbol{y}_{\text{arr}}, \boldsymbol{x}_{\text{pre}}, \boldsymbol{y}_{\text{pre}})$ is decomposed into a text-to-token model $p(\boldsymbol{s}_{\text{arr}}| \boldsymbol{y}_{\text{arr}}, \boldsymbol{x}_{\text{pre}}, \boldsymbol{y}_{\text{pre}})$ and a token-to-speech model $p(\boldsymbol{x}_{\text{arr}} | \boldsymbol{s}_{\text{arr}})$, where $\boldsymbol{s}_{\text{arr}}$ is the speech tokens corresponding to the speech waveform segment $\boldsymbol{x}_{\text{arr}}$.
+Specifically, the proposed TMT is adopted as the backbone of text-to-token model.
+Then, an off-the-shelf chunk-aware speech decoder \cite{cosyvoice2.0} is adopted as the token-to-speech model.
 
 The proposed TMT module is based on a llama-style Transformer \cite{llama}.
 We have specifically designed a novel attention mask to accommodate temporally-ordered mask generation.
@@ -168,10 +168,10 @@ Below, I will detail the two-stage training strategy of the TMT-based text-to-to
 
 Given a dataset of transcribed speech ($\boldsymbol{\tilde{x}}$, $\boldsymbol{\tilde{y}}$), where $\boldsymbol{\tilde{x}}$ and $\boldsymbol{\tilde{y}}$ denote an audio sample and its transcript, respectively, the transcript $\boldsymbol{\tilde{y}}$ is tokenized into a BPE token sequence $\boldsymbol{y} = [y_1, y_2, y_3, ..., y_L]$, where $L$ is the number of BPE tokens.
 An off-the-shelf speech tokenizer is used to encode the speech sample $\boldsymbol{\tilde{x}}$ into $T$ frame discrete speech tokens $\boldsymbol{s} = [s_1, s_2, s_3, ..., s_T]$.
-We further define duration tokens $\boldsymbol{a} = [a_1, a_2, a_3, ..., a_L]$ as the positions indicating the end time of each corresponding BPE token within the speech token sequence, with $a_L = T.$  For a pair of ($\boldsymbol{\tilde{x}}$, $\boldsymbol{\tilde{y}}$), $\boldsymbol{a}$ can be obtained through an open-source alignment tool.
+We further define duration tokens $\boldsymbol{a} = [a_1, a_2, a_3, ..., a_L]$ as the positions indicating the end time of each corresponding BPE token within the speech token sequence, with $a_L = T.$ For a pair of ($\boldsymbol{\tilde{x}}$, $\boldsymbol{\tilde{y}}$), $\boldsymbol{a}$ can be obtained through an open-source alignment tool.
 
 As shown in Figure \ref{fig1}, to maintain consistency with the inference process (see Section \ref{sec:inference}), the sequence input is then constructed as follows.
-We select a random number $n \in [1, L]$, which indicates that when receiving streaming text input, SyncSpeech needs to  generate the speech tokens corresponding to the $n$-th BPE token  at this moment.
+We select a random number $n \in [1, L]$, which indicates that when receiving streaming text input, SyncSpeech needs to generate the speech tokens corresponding to the $n$-th BPE token at this moment.
 To avoid unnatural pauses, SyncSpeech allows look ahead $q$ text tokens, obtaining a truncated text token sequence $\boldsymbol{y}' = [y_1, y_2, y_3, ..., y_{L'}]$, where $L'=min(L, n+q)$.
 Based on the duration tokens $\boldsymbol{a}$, the truncated speech token sequence $\boldsymbol{s}_{1:a_{n}}=[s_1, s_2, ...., s_{a_{n}}]$ is obtained.
 Then, we define the masked speech token sequence $\boldsymbol{s}'$ and and corresponding binary mask
@@ -211,7 +211,7 @@ In this way, we simulate the scenario of receiving streaming text input during t
 
 We design a corresponding attention mask, as shown in Figure \ref{fig1}.
 Specifically, a causal mask is used for the truncated text sequence $\boldsymbol{y}'$ and duration placeholder parts.
-For the  masked speech token sequence $\boldsymbol{s}'$, a dynamic chunk attention mask is applied based on the duration tokens $\boldsymbol{a}$, enabling it to attend all historical tokens, as well as all speech tokens and mask tokens corresponding to their own text BPE tokens.
+For the masked speech token sequence $\boldsymbol{s}'$, a dynamic chunk attention mask is applied based on the duration tokens $\boldsymbol{a}$, enabling it to attend all historical tokens, as well as all speech tokens and mask tokens corresponding to their own text BPE tokens.
 
 </td><td>
 
@@ -260,8 +260,8 @@ This approach enhances the efficiency of the training process, and the masked pr
 <table><tr><td width="50%">
 
 In this subsection, we introduce the other modules in SyncSpeech besides TMT.
-1) Text BPE tokenizer: To facilitate interaction with upstream LLMs, we  utilize the Qwen tokenizer \cite{qwen} directly.
-2) Speech tokenizer:   the open-source supervised speech semantic (S3) tokenizer \cite{cosyvoice2.0} is selected, which operates at 25 Hz.
+1) Text BPE tokenizer: To facilitate interaction with upstream LLMs, we utilize the Qwen tokenizer \cite{qwen} directly.
+2) Speech tokenizer: the open-source supervised speech semantic (S3) tokenizer \cite{cosyvoice2.0} is selected, which operates at 25 Hz.
 The S3 tokenizer is developed by integrating finite scalar quantization (FSQ) \cite{fsq} into the intermediate representations of an ASR model trained on large-scale data, and then fine-tuning it for the ASR task.
 2) The off-the-shelf speech decoder \cite{cosyvoice2.0} is based on the conditional flow matching (CFM) decoder and HiFi-GAN vocoder \cite{hifigan}.
 The CFM decoder employs a chunk-aware training strategy, enabling the streaming generation of Mel-spectrograms from the chunk-size input speech tokens.
@@ -276,7 +276,7 @@ These Mel-spectrograms are then converted into speech using the vocoder, which o
 <table><tr><td width="50%">
 
 During the inference process, SyncSpeech processes text in a streaming manner and synchronously generates speech, with the general algorithm flow shown in Algorithm \ref{alg1}.
-Specifically, when the number of input text BPE tokens $\boldsymbol{y}$ exceeds the look-ahead number $q$,  the input sequence $\boldsymbol{f} = [\boldsymbol{y}, D]$ is built, which is fed into TMT to predict the duration of speech tokens corresponding to $y_1$.
+Specifically, when the number of input text BPE tokens $\boldsymbol{y}$ exceeds the look-ahead number $q$, the input sequence $\boldsymbol{f} = [\boldsymbol{y}, D]$ is built, which is fed into TMT to predict the duration of speech tokens corresponding to $y_1$.
 Then, based on the predicted duration, we perform sequence padding by inserting the mask tokens and a duration prediction placeholder.
 Subsequently, the sequence is fed back into TMT for synchronous mask prediction of $y_1$ and the duration prediction of $y_2$, followed by the input sequence $\boldsymbol{s}$ update and padding.
 For subsequent BPE token input, the above prediction step, update step, and padding step are repeated to generate speech tokens in a streaming manner.
@@ -293,6 +293,61 @@ Figure \ref{fig2} in the Appendix shows detailed inference visualizations.
 ## 4·Experiments: 实验
 
 <table><tr><td width="50%">
+
+**Datasets**
+
+We trained SyncSpeech on datasets in both English and Mandarin, including the 585-hour LibriTTS \cite{libritts} dataset and 600 hours of internal Mandarin datasets.
+The internal Mandarin dataset was further expanded to approximately 2000 hours, employing techniques such as speed alteration and pitch shifting.
+The Montreal Forced Aligner (MFA) \cite{mfa} aligned transcripts according to its phone set, after which the alignment was transformed into text BPE-level format.
+We evaluated SyncSpeech using three benchmarks: (1) LibriSpeech \textit{text-clean} \cite{librispeech}, a standard English TTS evaluation set; (2) SeedTTS \textit{test-zh} \cite{seedtts}, with 2,000 samples from the out-of-domain Mandarin DiDiSpeech dataset \cite{didispeech}; and (3) SeedTTS \textit{test-hard}, containing approximately 400 difficult cases to evaluate TTS model robustness with repeated text, tongue twisters, and other complex synthesis scenarios.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Settings**
+
+We set the number of text tokens to look ahead $q=1$.
+The chunk size of speech decoder is 15.
+TMT has 16 layers, 16 attention heads, 1024-dimensional embeddings, and 2048-dimensional feed-forward layers.
+SyncSpeech was trained on 4 NVIDIA A800 80G GPUs.
+The pre-training stage lasts for 70K steps, and the second stage lasts for 20K steps.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Baseline Models**
+
+This paper focuses on low-latency and efficient TTS in dual-stream scenarios.
+Under the same data scale, we reproduced the following baseline models for comparison: CosyVoice \cite{cosyvoice} and recently proposed CosyVoice2 \cite{cosyvoice2.0}.
+CosyVoice requires complete text input before speech generation.
+CosyVoice2 uses interleaved text-speech modeling to process streaming text input and simultaneously generate streaming speech.
+We trained CosyVoice, CosyVoice2, and SyncSpeech using the same speech tokenizer and text tokenizer, and employed the same open-source streaming speech decoder.
+We utilized the official code\footnote{https://github.com/FunAudioLLM/CosyVoice} to reproduce the model and adopted a Llama-style Transformer, matching the size of SyncSpeech, as the backbone of the text-to-speech model.
+Additionally, we compared the open-sourced TTS model MaskGCT \cite{maskgct}, F5-TTS \cite{F5tts}, and VALL-E \cite{valle}, which were trained on large-scale data.
+More details about baseline models can be found in the Appendix \ref{baselines}.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Evaluation Metrics**
+
+For the three benchmarks, we evaluated speech quality, latency, and efficiency.
+For speech robustness, we chose Whisper-V3 and Paraformer as the ASR models for English and Mandarin, respectively, to transcribe the generated speech.
+Then, we calculated the WER compared to the original transcriptions to evaluate the spech robustness.
+We adopted the ERes2Net-based \cite{eres2net} speaker verification model\footnote{https://github.com/modelscope/3D-Speaker} to evaluate speaker similarity (SS).
+We selected 100 sentences from each system and invited 10 native listeners to conduct a subjective MOS evaluation for speech naturalness (MOS-N), scoring from 1 to 5.
+In terms of latency and efficiency, we compared the performance of various models on a single A800 GPU.
+Due to the off-the-shelf speech decoder, we evaluate the latency and efficiency of the text-to-token stage across all models, except for F5-TTS.
+We calculated the time required for the number of speech tokens to reach the chunk size of the speech decoder as First-packet latency (FPL).
+There are two scenarios: one assumes the text is already available (FPL-A), while the other involves receiving output from the upstream LLM model (FPL-L), accounting for the time required for text generation.
+For the real-time factor (RTF), we measure the ratio of the total duration of generated speech to the total time taken by the model.
+More details about FPL and RTF can be found in the Appendix \ref{evaluation metrics}.
 
 </td><td>
 
